--- a/Tiles CLOUD/webClient/src/scss/side-menu.scss
+++ b/Tiles CLOUD/webClient/src/scss/side-menu.scss
@@ -1,8 +1,3 @@
-$bcolor:#777;
-$sidebarWidth:30em;
-
-$sidebarColor:#191818;
-
 /**
 * @src http://purecss.io/layouts/ - Responsive Side Menu
 **/
@@ -18,7 +13,6 @@ body {
 /*
 Add transition to containers so they can push in and out.
 */
-
 #layout,
 #menu,
 .menu-link {
@@ -32,25 +26,21 @@ Add transition to containers so they can push in and out.
 /*
 This is the parent `<div>` that contains the menu and the content area.
 */
-
 #layout {
   position: relative;
   padding-left: 0;
 }
-
 #layout.active #menu {
   left: $sidebarWidth;
   width: $sidebarWidth;
 }
 
 #layout.active .menu-link {
-  left: $sidebarWidth;
+  left: $sidebarMenuLink;
 }
-
 /*
 The content `<div>` is where all your content goes.
 */
-
 .content {
   margin: 0 auto;
   padding: 0 2em;
@@ -66,13 +56,11 @@ The content `<div>` is where all your content goes.
   padding: 2.5em 2em 0;
   border-bottom: 1px solid #eee;
 }
-
 .header h1 {
   margin: 0.2em 0;
   font-size: 3em;
   font-weight: 300;
 }
-
 .header h2 {
   font-weight: 300;
   color: #ccc;
@@ -86,30 +74,36 @@ The content `<div>` is where all your content goes.
   color: #888;
 }
 
+
+
 /*
 The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu` that
 appears on the left side of the page.
 */
 
 #menu {
-  margin-left: -$sidebarWidth;
-  /* "#menu" width */
+  margin-left: -$sidebarWidth; /* "#menu" width */
   width: $sidebarWidth;
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
-  z-index: 1000;
-  /* so the menu or its navicon stays above all content */
+  z-index: 1000; /* so the menu or its navicon stays above all content */
   background: $sidebarColor;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+
+
+}
+
+#menu .radio, #menu .checkbox
+{
+  padding-left: 0;
 }
 
 /*
-    All anchors inside the menu should be styled like this.
-    */
-
+All anchors inside the menu should be styled like this.
+*/
 #menu a {
   color: #999;
   border: none;
@@ -117,9 +111,8 @@ appears on the left side of the page.
 }
 
 /*
-    Remove all background/borders, since we are applying them to #menu.
-    */
-
+Remove all background/borders, since we are applying them to #menu.
+*/
 #menu .pure-menu,
 #menu .pure-menu ul {
   border: none;
@@ -127,44 +120,38 @@ appears on the left side of the page.
 }
 
 /*
-    Add that light border to separate items into groups.
-    */
-
+Add that light border to separate items into groups.
+*/
 #menu .pure-menu ul,
 #menu .pure-menu .menu-item-divided {
   border-top: 1px solid #333;
 }
-
 /*
-        Change color of the anchor links on hover/focus.
-        */
-
+Change color of the anchor links on hover/focus.
+*/
 #menu .pure-menu li a:hover,
 #menu .pure-menu li a:focus {
   background: #333;
 }
 
 /*
-    This styles the selected menu item `<li>`.
-    */
-
+This styles the selected menu item `<li>`.
+*/
 #menu .pure-menu-selected,
 #menu .pure-menu-heading {
-  background: #1f8dd6;
+  background: $sidebarHeaderColor;
+  border-bottom:1px solid #fff;
 }
-
 /*
-        This styles a link within a selected menu item `<li>`.
-        */
-
+This styles a link within a selected menu item `<li>`.
+*/
 #menu .pure-menu-selected a {
   color: #fff;
 }
 
 /*
-    This styles the menu heading.
-    */
-
+This styles the menu heading.
+*/
 #menu .pure-menu-heading {
   font-size: 110%;
   color: #fff;
@@ -182,18 +169,14 @@ how it works:
 `.menu-link` represents the responsive menu toggle that shows/hides on
 small screens.
 */
-
 .menu-link {
   position: fixed;
-  display: block;
-  /* show this only on small screens */
+  display: block; /* show this only on small screens */
   top: 0;
-  left: 0;
-  /* "#menu width" */
+  left: 0; /* "#menu width" */
   background: #000;
   background: rgba(0,0,0,0.7);
-  font-size: 10px;
-  /* change this value to increase/decrease button size */
+  font-size: 10px; /* change this value to increase/decrease button size */
   z-index: 10;
   width: 2em;
   height: auto;
@@ -229,34 +212,49 @@ small screens.
   margin-top: 0.6em;
 }
 
+
 /* -- Responsive Styles (Media Queries) ------------------------------------- */
 
 /*
 Hides the menu at `48em`, but modify this based on your app's needs.
 */
+@media (min-width: 48em) {
 
-.header,
-.content {
-  padding-left: 2em;
-  padding-right: 2em;
+  .header,
+  .content {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+
+  #layout {
+    padding-left: $sidebarWidth; /* left col width "#menu" */
+    left: 0;
+  }
+  #menu {
+    left: $sidebarWidth;
+  }
+
+  .menu-link {
+    position: fixed;
+    left: $sidebarWidth;
+    display: none;
+  }
+
+  #layout.active .menu-link {
+    left: $sidebarMenuLink;
+  }
 }
 
-#layout {
-  padding-left: $sidebarWidth;
-  /* left col width "#menu" */
-  left: 0;
+@media (max-width: 48em) {
+  /* Only apply this when the window is small. Otherwise, the following
+  case results in extra padding on the left:
+      * Make the window small.
+      * Tap the menu to trigger the active state.
+      * Make the window large again.
+  */
+  #layout.active {
+    position: relative;
+    left: $sidebarWidth;
+  }
 }
 
-#menu {
-  left: $sidebarWidth;
-}
-
-.menu-link {
-  position: fixed;
-  left: $sidebarWidth;
-  display: none;
-}
-
-#layout.active .menu-link {
-  left: $sidebarWidth;
-}
