--- a/Tiles CLOUD/webClient/src/views/layouts/page.hbs
+++ b/Tiles CLOUD/webClient/src/views/layouts/page.hbs
@@ -18,13 +18,15 @@
 
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
-
+    <script src="../node_modules/handlebars/dist/handlebars.runtime.min.js"></script>
 </head>
 <body>
+
 <script src="asset/js/browserMqtt.js"></script>
 <script src="asset/js/tileClient.js"></script>
 <script src="asset/js/sidebar.js"></script>
 <script src="asset/js/modules/LedOn.js"></script>
+<script src="asset/js/templates.js"></script>
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
