--- a/Tiles CLOUD/webClient/src/css/theme/main.css
+++ b/Tiles CLOUD/webClient/src/css/theme/main.css
@@ -428,6 +428,15 @@ Hides the menu at `48em`, but modify this based on your app's needs.
   #layout.active {
     position: relative;
     left: 30em; } }
+.tiles {
+  color: #fff; }
+  .tiles #tiles-header {
+    font-weight: bold;
+    border-bottom: 1px solid #c4e3f3;
+    padding: 0.4em 0; }
+  .tiles .tile {
+    padding: 0.2em 0 0.2em 1em; }
+
 .sidebar-table {
   width: 100%;
   text-align: center;
