--- a/Tiles CLOUD/webClient/src/views/partials/sidebar.hbs
+++ b/Tiles CLOUD/webClient/src/views/partials/sidebar.hbs
@@ -1,37 +1,38 @@
 <div class="pure-menu">
     <a class="pure-menu-heading hline" href="#">Tiles Cloud v0.1.0</a>
 
-    <div>
+    <script>
+        $( document ).ready(function() {
+            console.log( "ready!" );
 
-        <table class="sidebar-table">
-            <thead >
-            <tr>
-                <th>My Tiles</th>
-                <th>Debug Console</th>
-                <th>Online</th>
-                <th>In use</th>
-            </tr>
-            </thead>
+        var data={
+            tiles:[
+                {
+                    name:"first",
+                    id:"123",
+                    online:true,
+                    inUse:false
+                },
+                {
+                    name:"second",
+                    id:"124",
+                    online:true,
+                    inUse:false
+                }
+            ]
 
-            <tbody>
-            <tr>
-                <td>Tile alpha</td>
-                <td><span class="fa-stack">
-                          <i class="fa fa-square fa-stack-2x" style="color:#282828;"></i>
-                          <i class="fa fa-terminal fa-stack-1x "></i>
-                            </span></td>
-                <td>
-                    <div class="radio radio-success">
-                        <input type="radio" name="radio10" id="radio10" value="option1" checked>
-                        <label for="radio10">&nbsp;</label>
-                    </div>
-                </td>
-                <td><i class="fa fa-circle"></i></td>
-            </tr>
-            </tbody>
-        </table>
 
-    </div>
+        };
+        var template=JST["src/views/templates/tiles_sidebar.hbs"];
+        var html=template(data);
+
+        document.getElementById('tileSide').innerHTML=html;
+        });
+
+    </script>
+
+
+    <div id="tileSide" class="tiles"></div>
 
     <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
