--- a/Tiles CLOUD/webClient/src/views/layouts/page.hbs
+++ b/Tiles CLOUD/webClient/src/views/layouts/page.hbs
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <script src="../node_modules/handlebars/dist/handlebars.runtime.min.js"></script>
+
+    <script>
+
+    </script>
 </head>
 <body>
 
@@ -31,7 +35,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
 <script>
-
+    Handlebars.partials = JST;
     var led=null;
     var client=null;
     $( document ).ready(function() {
