rewrote mqtt client to singleton, added loading of modules, fixed according to mobapp

--- a/Tiles CLOUD/webClient/src/views/templates/awsmRadio.hbs
+++ b/Tiles CLOUD/webClient/src/views/templates/awsmRadio.hbs
@@ -1,5 +1,5 @@
 <div class="radio radio-{{type}}">
-    <input type="radio" name="{{name}}" id="{{id}}" value="{{value}}" {{#if isChecked}}checked{{/if}}>
+    <input type="radio" name="{{name}}" id="{{id}}" value="{{value}}" {{#if isChecked}}checked{{/if}} readonly>
     <label for="{{id}}">
         {{label}}
     </label>
