--- a/Tiles CLOUD/webClient/src/views/layouts/page.hbs
+++ b/Tiles CLOUD/webClient/src/views/layouts/page.hbs
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <script src="../node_modules/handlebars/dist/handlebars.runtime.min.js"></script>
-
     <script>
 
     </script>
@@ -27,9 +26,12 @@
 <body>
 
 <script src="asset/js/browserMqtt.js"></script>
+<script src="asset/js/Func.js"></script>
 <script src="asset/js/tileClient.js"></script>
+<script src="asset/js/Tile.js"></script>
 <script src="asset/js/sidebar.js"></script>
 <script src="asset/js/modules/LedOn.js"></script>
+<script src="asset/js/modules/RegisterDevice.js"></script>
 <script src="asset/js/templates.js"></script>
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -37,7 +39,10 @@
 <script>
     Handlebars.partials = JST;
     var led=null;
-    var client=null;
+    var client=TileClient.getInstance();
+
+    var registeredDevices=null;
+
     $( document ).ready(function() {
 
         sidebarToggle.init();
@@ -45,13 +50,17 @@
 
         var subRec = "TilesReceive";
 
-        client = new TileClient("ws://localhost:3000");
+        client.connect("ws://localhost:3000","#connectStatus");
 
-        client.connect("#connectStatus");
-
-        client.subscribe("Tiles");
+        //client.subscribe("Tiles");
 
         client.addModule(subRec, led.changeDomStatus);
+
+        registeredDevices=new RegisterDevice();
+
+
+        client.addModule("activate",registeredDevices.connect);
+        client.addModule("deactivate",registeredDevices.disconnect);
 
     });
 
