--- a/Tiles CLOUD/webClient/src/views/partials/sidebar.hbs
+++ b/Tiles CLOUD/webClient/src/views/partials/sidebar.hbs
@@ -6,6 +6,7 @@
             var template = JST["tiles_sidebar"];
 
             document.getElementById('tileSide').innerHTML = template(registeredDevices.getTiles());
+            Func.onDebugTile();
         });
     </script>
 
