--- a/Tiles CLOUD/webClient/src/views/templates/tiles_sidebar.hbs
+++ b/Tiles CLOUD/webClient/src/views/templates/tiles_sidebar.hbs
@@ -8,11 +8,12 @@
 
 <div id="tiles" class="pure-g">
     {{#each tiles}}
-        <div class="tile">
+        <div class="tile" id="tile-{{id}}" data-id="{{id}}">
             <div class="pure-u-1-4">{{name}}</div>
-            <div class="pure-u-1-4"><a href="#{{id}}" >Debug</a></div>
+            <div class="pure-u-1-4"><a href="#{{id}}" class="tile-terminal" data-id="{{id}}"><i
+                    class="fa fa-terminal fa-box"></i></a></div>
             <div class="pure-u-1-4">{{> awsmRadio type="success" name=name id=id value=id isChecked=online }}</div>
-            <div class="pure-u-1-4">{{inUse}}</div>
+            <div class="pure-u-1-4">{{> awsmRadio type="success" name=name id=id value=id isChecked=inUse }}</div>
         </div>
     {{/each}}
 </div>
