--- a/Tiles CLOUD/webClient/src/views/layouts/page.hbs
+++ b/Tiles CLOUD/webClient/src/views/layouts/page.hbs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <script src="../node_modules/handlebars/dist/handlebars.runtime.min.js"></script>
+    <script src="../bower_components/store/store.min.js"></script>
         <script>
 
     </script>
