added IDE in browser

--- a/Tiles CLOUD/webClient/src/views/layouts/page.hbs
+++ b/Tiles CLOUD/webClient/src/views/layouts/page.hbs
@@ -18,11 +18,19 @@
 
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
+    <script src="../bower_components/alertify.js/lib/alertify.min.js"></script>
+    <link rel="stylesheet" href="../bower_components/alertify.js/themes/alertify.core.css">
+    <link rel="stylesheet" href="../bower_components/alertify.js/themes/alertify.default.css">
+
+
     <script src="../node_modules/handlebars/dist/handlebars.runtime.min.js"></script>
     <script src="../bower_components/store/store.min.js"></script>
-        <script>
+    <script src="../bower_components/ace-builds/src-min/ace.js"></script>
+    <script src="../bower_components/ace-builds/src-min/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../bower_components/ace-builds/src-min/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 
-    </script>
+
+
 </head>
 <body>
 <script src="asset/js/browserMqtt.js"></script>
