--- a/Tiles CLOUD/webClient/src/views/pages/index.hbs
+++ b/Tiles CLOUD/webClient/src/views/pages/index.hbs
@@ -2,6 +2,44 @@
     <h3>Recipes Editor</h3>
 </div>
 
+
+
+<div class="pure-g" style="height:100%;">
+<div class="pure-u-1" style="height:100%;">
+    <p>Press <code>ALT+S</code> to save</p>
+<div id="editor"></div>
+</div>
+</div>
+
+<script>
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/twilight");
+
+    var JavaScriptMode = ace.require("ace/mode/javascript").Mode;
+    editor.session.setMode(new JavaScriptMode());
+
+    editor.commands.addCommand({
+        name: 'myCommand',
+        bindKey: {win: 'ALT-S',  mac: 'Command-M'},
+        exec: function(editor) {
+            console.log("saving");
+            alertify.success("Saved successfully");
+
+        },
+        readOnly: true // false if this command should not apply in readOnly mode
+    });
+</script>
+<style>
+    #editor {
+        position: relative;
+        width: inherit;
+        /* max-width: 100%; */
+        height: 92.5vh;
+       /* height:100%;*/
+
+    }
+</style>
+<!--
 <div class="radio radio-danger">
     <input type="radio" name="radio3" id="radio3" value="option1" checked>
     <label for="radio3">
@@ -43,4 +81,4 @@
 
     <button id="connectStatus">connect status</button>
 
-</div>
+</div>-->
