--- a/Tiles CLOUD/api-server/views/index.ejs
+++ b/Tiles CLOUD/api-server/views/index.ejs
@@ -1,11 +1,54 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<head>
+		<title>Tiles API</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		
+		<!-- AngularJS -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		
+		<!-- AngularJS modules -->
+		<script src="/javascripts/app.js"></script>
+		<script src="/javascripts/controllers.js"></script>
+		<script src="/javascripts/services.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+	</head>
+	<body ng-app="tilesApi">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
+				<ui-view></ui-view>
+			</div>
+		</div>
+		<script type="text/ng-template" id="/users.html">
+			<div class="page-header">
+				<h1>Users</h1>
+			</div>
+			<div ng-repeat="user in users">
+				<a href="#/users/{{user._id}}"><span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}</a>
+			</div>
+			<form ng-submit="addUser()" style="margin-top:30px;">
+				<h3>Add a new user</h3>
+				<div class="form-group">
+					<input type="text" placeholder="Username" ng-model="username">
+				</div>
+				<button type="submit" class="btn btn-primary">Post</button>
+			</form>
+		</script>
+		<script type="text/ng-template" id="/user.html">
+			<div class="page-header">
+				<h1>{{user.username}}</h1>
+			</div>
+			<h3>Tiles</h3>
+			<div ng-hide="tiles.length">No Tiles registered for this user.</div>
+			<ul>
+				<li ng-repeat="tile in tiles">{{tile}}</li>
+			</ul>
+			<form ng-submit="addTile()" style="margin-top:30px;">
+				<h4>Register a new Tile</h4>
+				<div class="form-group">
+					<input type="text" placeholder="Tile Device ID" ng-model="tileDeviceId">
+				</div>
+				<button type="submit" class="btn btn-primary">Post</button>
+			</form>
+		</script>
+	</body>
 </html>
