--- a/Tiles CLOUD/api-server/views/index.ejs
+++ b/Tiles CLOUD/api-server/views/index.ejs
@@ -11,6 +11,7 @@
 		<script src="/javascripts/controllers.js"></script>
 		<script src="/javascripts/services.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body ng-app="tilesApi">
 		<div class="row">
