--- a/Tiles CLOUD/api-server/views/index.ejs
+++ b/Tiles CLOUD/api-server/views/index.ejs
@@ -2,6 +2,7 @@
 	<head>
 		<title>Tiles API</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/stylesheets/style.css">
 		
 		<!-- AngularJS -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -18,6 +19,10 @@
 			<div class="col-xs-10 col-xs-offset-1">
 				<ui-view></ui-view>
 			</div>
+		</div>
+		<div id="appInfoLabel">
+			<span>Version: <%= appVersion %></span><br/>
+			<span>Build date: <%= buildDate %></span>
 		</div>
 		<script type="text/ng-template" id="/users.html">
 			<div class="page-header">
