Going through some of the auto-generated files and deleting unnecessary ones and renaming the app. Also some commenting to mark todos.

--- a/GATEWAY_2/tilesgateway/src/app/app.html
+++ b/GATEWAY_2/tilesgateway/src/app/app.html
@@ -1,1 +1,6 @@
 <ion-nav [root]="rootPage"></ion-nav>
+<!-- 
+	TODO: move the code from the old www/index.html here. 
+	This might require changing some of it where the tags are updated
+	or angular 1 is used. 
+-->
