--- a/GATEWAY_2/tilesgateway/src/app/app.html
+++ b/GATEWAY_2/tilesgateway/src/app/app.html
@@ -1,6 +1,21 @@
-<ion-nav [root]="rootPage"></ion-nav>
-<!-- 
-	TODO: move the code from the old www/index.html here. 
-	This might require changing some of it where the tags are updated
-	or angular 1 is used. 
--->
+<ion-menu [content]="content">
+
+	<ion-header>
+		<ion-navbar align-title="center">
+      <!-- Toggle left side menu -->
+      <button ion-button icon-only menuToggle>
+      	<ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Tiles</ion-title>
+    </ion-navbar>
+	</ion-header>
+
+	<ion-content>
+		<ion-list>
+      <ion-item style="text-align:center;border:0px;">{{appVersion}}</ion-item>
+    </ion-list>
+	</ion-content>
+
+</ion-menu>
+<ion-nav [root]="rootPage" #content></ion-nav>	
+
