create that beautiful gui, YO! toggle is still a bitch

--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -1,3 +1,27 @@
 page-home {
 
 }
+
+.mainList {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.devices {
+  margin-bottom: 7px;
+}
+
+.titleBttn {
+  float: right;
+}
+
+.bttn {
+  float: right;
+  width: 100px;
+}
+
+.bttnRel {
+  margin-top: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
