--- a/GATEWAY/src/theme/variables.scss
+++ b/GATEWAY/src/theme/variables.scss
@@ -28,13 +28,8 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222,
-  test:       #51a7e8
+  dark:       #222
 );
-
-.main {
-  background-color: #4b9ad5;
-}
 
 
 // App iOS Variables
