--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -25,3 +25,23 @@ page-home {
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+.toggleIonItem {
+  margin: 0;
+  padding: 0;
+}
+
+.toggleText {
+  width: 60px;
+  margin: 0;
+  padding-left: 5px;
+  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.tgle {
+  width: 70px;
+  margin: 0;
+  padding: 0;
+}
