--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -2,24 +2,34 @@ page-home {
 
 }
 
+ion-title {
+  padding: 0;
+  margin: 0;
+}
+
+.titleBttn {
+  margin-right: 1%;
+  float: right;
+}
+
 .mainList {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 0.625em;
+  margin-right: 0.625em;
 }
 
 .devices {
-  margin-bottom: 7px;
+  margin-bottom: 0.4375em;
 }
 
 .bttn {
   float: right;
-  width: 100px;
+  width: 7em;
 }
 
 .bttnRel {
-  margin-top: 7px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  margin-top: 0.4375em;
+  padding-top: 0.3125em;
+  padding-bottom: 0.3125em;
   float: left;
 }
 
@@ -29,16 +39,16 @@ page-home {
 }
 
 .toggleText {
-  width: 60px;
+  width: 3.75em;
   margin: 0;
-  padding-left: 5px;
+  padding-left: 0.3125em;
   padding-right: 0;
   padding-top: 0;
   padding-bottom: 0;
 }
 
 .tgle {
-  width: 70px;
+  width: 4.375em;
   margin: 0;
   padding: 0;
 }
