make connect button disabled when pushing button

--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -26,29 +26,33 @@ ion-title {
   width: 8em;
 }
 
-.bttnRel {
+#devName {
+  padding-top: 0.7em;
+}
+
+/*.bttnRel {
   margin-top: 0.4375em;
   padding-top: 0.3125em;
   padding-bottom: 0.3125em;
   float: left;
-}
+}*/
 
-.toggleIonItem {
+/*.toggleIonItem {
   margin: 0;
   padding: 0;
-}
+}*/
 
-.toggleText {
+/*.toggleText {
   width: 3.75em;
   margin: 0;
   padding-left: 0.3125em;
   padding-right: 0;
   padding-top: 0;
   padding-bottom: 0;
-}
+}*/
 
-.tgle {
+/*.tgle {
   width: 4.375em;
   margin: 0;
   padding: 0;
-}
+}*/
