--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -35,23 +35,23 @@ ion-title {
   padding-top: 0.3125em;
   padding-bottom: 0.3125em;
   float: left;
-}*/
+}
 
-/*.toggleIonItem {
+.toggleIonItem {
   margin: 0;
   padding: 0;
-}*/
+}
 
-/*.toggleText {
+.toggleText {
   width: 3.75em;
   margin: 0;
   padding-left: 0.3125em;
   padding-right: 0;
   padding-top: 0;
   padding-bottom: 0;
-}*/
+}
 
-/*.tgle {
+.tgle {
   width: 4.375em;
   margin: 0;
   padding: 0;
