Added all scss rules from home.scss to app.scss, and added button for automatic login.

--- a/GATEWAY/src/pages/applications/applications.scss
+++ b/GATEWAY/src/pages/applications/applications.scss
@@ -1,3 +1,31 @@
 page-applications {
 
 }
+
+ion-title {
+  padding: 0;
+  margin: 0;
+}
+
+.titleBttn {
+  margin-right: 1%;
+  float: right;
+}
+
+.mainList {
+  margin-left: 0.625em;
+  margin-right: 0.625em;
+}
+
+.devices {
+  margin-bottom: 0.4375em;
+}
+
+.bttn {
+  float: right;
+  width: 8em;
+}
+
+#devName {
+  padding-top: 0.7em;
+}
