--- a/GATEWAY/src/pages/physical-tiles/physical-tiles.scss
+++ b/GATEWAY/src/pages/physical-tiles/physical-tiles.scss
@@ -1,6 +1,6 @@
 page-physical-tiles {
 	.device_btn {
-		margin: 0.15 !important;
-	  padding: .5em !important;
+		margin: 0.15em !important;
+	  padding: 0.5em !important;
 	}
 }
